--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git@github.com:PatricioRios/custom-nodes.git
 [submodule "file-and-notify-manager-mcp"]
 	path = file-and-notify-manager-mcp
-	url = ./file-and-notify-manager-mcp
+	url = git@github.com:PatricioRios/file-and-notify-manager-mcp.git
 [submodule "directory-watcher"]
 	path = directory-watcher
-	url = ./directory-watcher
+	url = git@github.com:PatricioRios/directory-watcher.git
